k8s-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-backend
  labels:
    app.kubernetes.io/name: workshop-backend
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: workshop-backend
    app.kubernetes.io/component: backend
