k8s-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workshop-backend
  labels:
    app.kubernetes.io/name: workshop-backend
    app.kubernetes.io/component: route
spec:
  to:
    kind: Service
    name: workshop-backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
